[tool.poetry]
name = "toy-package"
version = "0.1.0"
description = ""
authors = ["Alina Li <alinali87@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
colorama = "^0.4.6"

[tool.poetry.scripts]
say-hello = "toy_package.scripts.say_hello:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
